# terrars-andrewbaxter-stripe

./: Cargo.toml  readme.md  terrars.json
src/: lib.rs
src/stripe/: account.rs  billing_portal_configuration.rs  coupon.rs  customer.rs  invoice.rs  invoiceitem.rs  mod.rs  payment_link.rs  plan.rs  price.rs  product.rs  promotion_code.rs  provider.rs  radar_value_list.rs  shipping_rate.rs  subscription.rs  subscription_item.rs  tax_rate.rs  terminal_configuration.rs  terminal_location.rs  terminal_reader.rs  webhook_endpoint.rs
