[package]
name = "terrars-andrewbaxter-stripe"
edition = "2021"
version = "0.1.3"
description = "Pre-generated Terrars Stripe bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-andrewbaxter-stripe"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.0.10"

[features]
account = []
billing_portal_configuration = []
coupon = []
customer = []
invoice = []
invoiceitem = []
payment_link = []
plan = []
price = []
product = []
promotion_code = []
radar_value_list = []
shipping_rate = []
subscription = []
subscription_item = []
tax_rate = []
terminal_configuration = []
terminal_location = []
terminal_reader = []
webhook_endpoint = []
